# aggregator-agent

./: .gitignore  README.md  data.py  image_agent.py  image_analysis.csv  main.py  notes.txt  performance_test.py  pyproject.toml
aggregator_agent/: generate_zoomed.py  image_agent.py  posterior_agent.py  schema.py  segmentation.py
aggregator_agent/outliers/: outlier_detection.py  pca_mahalanobis.py
aggregator_agent/posterior/: posterior_agent.py  schema.py
posterior/: fit_bad.py  fit_dual.py  fit_good.py  fit_noise.py  simulator.py  simulator_two_guassian.py
scripts/: check_one.py  performance_test.py  predict_directory.py  run_outlier_detection.py  run_posterior_agent.py  segment_all.py  segment_one.py  view_mismatched_results.py
