[project]
name = "aggregator-agent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Richard Hayes" }]

# Your runtime dependencies
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-ai>=1.25.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.setuptools.packages.find]
include = ["aggregator_agent*"]
exclude = ["data*"]

# uv-specific settings (optional but recommended)
[tool.uv]
# enables lockfile, needed for reproducible envs
managed = true

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
